# rust-cli

./: Cargo.toml  LICENSE  Makefile  README.md  build.sh  run.sh
src/: lib.rs  main.rs  tui.rs
