[package]
name = "rust-cli"
description = "Super simple Rust Clap example"
version = "0.1.7"
authors = ["github.com/electronicsleep"]
edition = "2021"

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
tui = "0.19"
crossterm = "0.25"

reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0.59"
